2007-04-16  Sebastien Pouliot  <sebastien@ximian.com>

	* Bitmap.cs: Add check in SetPixel for Format16bppGrayScale (but 
	without requiring a second unmanaged call on each SetPixel call).

2007-04-13  Sebastien Pouliot  <sebastien@ximian.com>

	* Brush.cs: Ensure we're zeroing the handle before calling 
	CheckStatus. Some clean up.
	* Pen.cs: Ensure we're zeroing the handle before calling CheckStatus.
	Use Locale.GetText for exceptions.

2007-04-11  Sebastien Pouliot  <sebastien@ximian.com>

	* Bitmap.cs: Move LockBits validations into unmanaged code.
	* gdipFunctions.cs: Add mapping for Win32Error in CheckStatus. Add
	globalization support for CheckStatus and add the GDI+ status code in
	the error message.
	* SolidBrush.cs: Clean up and add comments about [un]named colors.

2007-04-09  Sebastien Pouliot  <sebastien@ximian.com>

	* Color.cs: Remove duplicate check in == and add better comments

2007-04-09  Sebastien Pouliot  <sebastien@ximian.com> 

	* Color.cs: Remove hashtables and locks. All color properties are read
	from KnownColors. Remove extra & 0xFF (typecast to byte is enough).
	Keep track of the Name property once calculated. When possible (most
	likely case) don't create the names (strings) in Equals, == and !=
	* ColorTranslator.cs: Use the new KnownColors instead of the separate
	NamedColors and SystemColors.
	* ColorConverter.cs: Use the new KnownColors instead of the separate
	NamedColors and SystemColors.
	* gdipFunctions.cs: Moved GetSysColor p/invoke signature here as this
	class is marked by [SuppressUnmanagedCodeSecurity].
	* gdipStructs.cs: Moved Windows-specific GetSysColorIndex enum here.
	* KnownColors.cs: New. Single source for all colors.
	* SystemColors.cs: Vastly simplified. All color properties are read
	from KnownColors.

2007-04-05  Sebastien Pouliot  <sebastien@ximian.com> 

	* gdipFunctions.cs: Remove unused (and not part of GDI+) GdipGetHfont
	method.

2007-04-02  Sebastien Pouliot  <sebastien@ximian.com>
